# uxs

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
cmake/: macros.cmake
cmake/uxs/: macros.cmake
include/util/: algorithm.h  alignment.h  allocator.h  chars.h  common.h  cow_ptr.h  crc32.h  dllist.h  format.h  format_impl.h  functional.h  intrusive_list.h  iterator.h  list.h  map.h  multimap.h  multiset.h  pool_allocator.h  rbtree.h  rbtree_base.h  rbtree_multi.h  rbtree_node_handle.h  rbtree_unique.h  regex.h  regex_ext.h  set.h  span.h  stream.h  string_cvt.h  string_ext.h  string_view.h  stringalg.h  stringcvt.h  stringcvt_impl.h  utf.h  utf_cvt.h  utility.h  variant.h  vector.h
include/util/db/: json.h  value.h
include/util/io/: devbuf.h  devbuf_impl.h  filebuf.h  filebuf_impl.h  iobuf.h  iobuf_impl.h  iobuf_iterator.h  iodevice.h  iostate.h  istringbuf.h  istringbuf_impl.h  ostringbuf.h  ostringbuf_impl.h  rawfile.h  sysfile.h  ziparch.h  zipfile.h  zipfilebuf.h  zipfilebuf_impl.h
include/uxs/: algorithm.h  alignment.h  allocator.h  byteseq.h  chars.h  common.h  cow_ptr.h  crc32.h  dllist.h  dynarray.h  format.h  format_base.h  format_chrono.h  format_fs.h  format_impl.h  format_optional.h  format_ranges.h  function_call_iterator.h  functional.h  guid.h  intrusive_list.h  iterator.h  list.h  map.h  membuffer.h  memory.h  metaprog_alg.h  multimap.h  multiset.h  optional.h  pool_allocator.h  pool_allocator_impl.h  rbtree.h  rbtree_base.h  rbtree_multi.h  rbtree_node_handle.h  rbtree_unique.h  regex.h  set.h  span.h  (+13 more)
include/uxs/cli/: parser.h  parser_impl.h
include/uxs/db/: database_error.h  exception.h  json.h  json_impl.h  value.h  value_impl.h  value_serialize.h  xml.h  xml_impl.h
include/uxs/impl/: byteseq_impl.h  format_impl.h  pool_allocator_impl.h  string_cvt_impl.h  stringcvt_impl.h
include/uxs/impl/cli/: parser_impl.h
include/uxs/impl/db/: json_impl.h  value_impl.h  xml_impl.h
include/uxs/impl/io/: byteseqdev_impl.h  devbuf_impl.h  filebuf_impl.h  ibuf_impl.h  iflatbuf_impl.h  iobuf_impl.h  oflatbuf_impl.h  zipfilebuf_impl.h
include/uxs/intrusive/: list.h
include/uxs/io/: byteseqdev.h  devbuf.h  devbuf_impl.h  filebuf.h  filebuf_impl.h  ibuf.h  ibuf_impl.h  ibuf_iterator.h  iflatbuf.h  iflatbuf_impl.h  iobuf.h  iobuf_impl.h  iobuf_iterator.h  iodevice.h  iomembuffer.h  iostate.h  iotraits.h  istringbuf.h  istringbuf_impl.h  obuf_iterator.h  oflatbuf.h  oflatbuf_impl.h  ostringbuf.h  ostringbuf_impl.h  serialize.h  stream.h  sysfile.h  ziparch.h  zipfile.h  zipfilebuf.h  zipfilebuf_impl.h
platform/posix/src/io/: rawfile.cpp  stdfile.cpp  sysfile.cpp
platform/win/src/io/: rawfile.cpp  stdfile.cpp  sysfile.cpp
src/: byteseq.cpp  crc32.cpp  format.cpp  guid.cpp  pool_allocator.cpp  rbtree.cpp  string_alg.cpp  string_cvt.cpp  string_ext.cpp  stringalg.cpp  stringcvt.cpp  utf.cpp  variant.cpp
src/cli/: parser.cpp
src/db/: database_error.cpp  json.cpp  json.lex  json_lex_analyzer.inl  json_lex_defs.h  lex_analyzer.inl  lex_defs.h  value.cpp  xml.cpp  xml.lex  xml_lex_analyzer.inl  xml_lex_defs.h
src/io/: byteseqdev.cpp  devbuf.cpp  filebuf.cpp  ibuf.cpp  iflatbuf.cpp  iobuf.cpp  iostate.cpp  istringbuf.cpp  oflatbuf.cpp  ostringbuf.cpp  ziparch.cpp  zipfile.cpp  zipfilebuf.cpp
